Sat Aug 4 18:08:08 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h(fixedpoint_move_cursor): Removed bounds checking, as
	this is handled in fixedpoint_loop.
Sat Aug 4 15:21:40 EDT 2007 J Phelps <godless@users.sf.net>
	* resample_kernel.cpp (mix_sample): Fixed a math bug that caused
	pitch envelopes to sound like shit if they were used as filters.
Fri Aug 3 04:54:44 EDT 2007 J Phelps <godless@users.sf.net>
	* dds_helpers.cpp (get_sample_data,set_sample_data):
	Added support for multi-channel samples, at last!!!!
Fri Aug 3 02:44:54 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.h
	  sample_data.cpp (get_current_pos): Changed return type
	from size_t to ptrdiff_t.
	* tracker_voice.h: Changed type of Tracker_Voice::current_index
	from size_t to ptrdiff_t.
Fri Aug 3 01:54:44 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_viewer.cpp (paintEvent): Fixed fencepost bug
	that was causing the GNU vector class's array bounds
	checking to trip.
	* mdi_main_window.cpp: Updated version and website strings.
Wed Aug 1 02:02:12 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h (fixedpoint_loop): Copied in
	the version of fixedpoint_loop() from Revision 57.
	* sample_data.h: Changed type of current_pos from size_t
	to ptrdiff_t.
	* sample_data_fixedpoint.h (fixedpoint_loop): Restored the
	"sustaining" argument.
	* tracker_voice.cpp (add_to_mix_buffer): fixedpoint_loop() is
	called with "false" as the argument, until the code to load
	sustain loops from files is implemented.
Mon Jul 30 12:32:46 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp (add_to_mix_buffer): Added 1 to
	calculation of the number of "virtual samples", as in
	cheesetracker-0.9.9. This was thought to be an off-by-one
	bug, but it is now known that this is required for looping
	to work properly.
Mon Jul 30 03:37:11 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.cpp (Copy constructor): Fixed a bug where